--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "intelup",
+  "name": "ToBeDone",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Douglas Alves <douglas.expalves@gmail.com>",
